# x86decomp-releases

./: .gitignore  opencode.json
release-040/x86decomp-toolkit-0.4.0/: AGENTS.md  CHANGELOG.md  FEATURE_PARITY.md  MANIFEST.in  MANIFEST.sha256  Makefile  PROJECT_MEMORY.md  README.md  SECURITY.md  VERIFICATION.md  pyproject.toml
release-040/x86decomp-toolkit-0.4.0/corpus/ground_truth_sources/: static_initializers.cpp  tail_calls.c
release-040/x86decomp-toolkit-0.4.0/docs/: ARCHITECTURE_MAP.md  ARCHITECTURE_MAP_ASCII.txt  architecture.md  build-and-verification.md  guardrails.md  roadmap.md  supported-scope.md  v0.3-source-basis.md
release-040/x86decomp-toolkit-0.4.0/examples/compatibility/: v0.2-command-surface.json  v0.3.1-surface.json
release-040/x86decomp-toolkit-0.4.0/examples/relink/: lld-link-x64.json
release-040/x86decomp-toolkit-0.4.0/schemas/: coff-archive.schema.json  comdat-resolution.schema.json  execution-harness.schema.json  memory-event.schema.json  pipeline.schema.json  security-audit.schema.json
release-040/x86decomp-toolkit-0.4.0/scripts/: validate-contracts.py
release-040/x86decomp-toolkit-0.4.0/skills/x86decomp/: SKILL.md
release-040/x86decomp-toolkit-0.4.0/src/x86decomp/: __init__.py  cli.py  content_store.py  hybrid.py  mcp.py  models.py  pe32.py  project.py  project_state.py  security_audit.py  toolchains.py  tools.py  worker.py
release-040/x86decomp-toolkit-0.4.0/test-suite/: CHANGELOG.md  INTEGRATION.md  MAINTENANCE.md  MANIFEST.in  MANIFEST.sha256  README.md  SECURITY.md  VERIFICATION.md  pyproject.toml
release-040/x86decomp-toolkit-0.4.0/test-suite/docs/: ADAPTERS.md  ARCHITECTURE.md  ARCHITECTURE_MAP.md  COVERAGE_CONTRACT.md  (+3 more)
release-040/x86decomp-toolkit-0.4.0/tests/: test_dynamorio.py  test_ghidra.py  test_integration.py  test_release_compatibility.py  test_v040_documentation.py  test_v040_production.py
release-0711/x86decomp-toolkit-0.7.11/: .gitignore  AGENTS.md  ALL_FILE_MANIFEST_0.7.11.json  AUDIT_READ_RECEIPT_0.7.11.json  AUDIT_REMEDIATION_CHANGELOG.md  AUDIT_REMEDIATION_VERIFICATION_0.7.11.json  CHANGELOG.md  CODE_AUDIT_REPORT.md  DOCSTRING_AUDIT_0.7.11.json  DOCSTRING_AUDIT_0.7.11.md  FEATURE_PARITY.md  FINAL_TEST_GROUP_REPORT_0.7.11.json  FINAL_TEST_PARTITION_REPORT_0.7.11.json  MANIFEST.in  MANIFEST.sha256  Makefile  NOTICE  PROJECT_MEMORY.md  README.md  RELEASE_VERIFICATION.json  RELEASE_VERIFICATION.md  SECURITY.md  VERIFICATION.md  mkdocs.yml  pyproject.toml  x86decomp-test.json
release-0711/x86decomp-toolkit-0.7.11/docs/: ARCHITECTURE_MAP.md  COMMAND_REFERENCE_0.7.11.json  COMMAND_REFERENCE_0.7.11.md  adapter-capabilities.md  architecture.md  build-and-verification.md  index.md  local-llm.md  supported-scope.md
release-0711/x86decomp-toolkit-0.7.11/project-audit/: ARCHITECTURE_NOTES.md  AUDIT_LEDGER.csv  AUDIT_PLAN.md  AUDIT_REMEDIATION_MANIFEST.sha256  AUDIT_REMEDIATION_REPORT.md  BASELINE.md  COMMAND_SYSTEM_AUDIT.md  COVERAGE_REPORT.md  CROSS_FILE_ANALYSIS.md  DOCUMENTATION_AUDIT.md  FILE_INVENTORY.csv  FINAL_AUDIT_REPORT.md  FINDINGS_REGISTER.md  REVERSE_ENGINEERING_PRACTICES.md  RUN_LOG.md  SESSION_STATE.md  manifest_failures.txt
release-0711/x86decomp-toolkit-0.7.11/schemas/: claim.schema.json  project-template.schema.json
release-0711/x86decomp-toolkit-0.7.11/scripts/: audit-docstrings.py  generate_command_reference.py  run-pytest-partitions.py  source_hashes.py  sync-release-contracts.py  validate-contracts.py  verify-corpus-sync.py  verify_self_test_sync.py
release-0711/x86decomp-toolkit-0.7.11/site/: 404.html  ARCHITECTURE_MAP_ASCII.txt  index.html
release-0711/x86decomp-toolkit-0.7.11/test-suite/: CHANGELOG.md  INTEGRATION.md  MAINTENANCE.md  MANIFEST.in  MANIFEST.sha256  NOTICE  README.md  SECURITY.md  VERIFICATION.md  pyproject.toml
release-0711/x86decomp-toolkit-0.7.11/tests/: pe_fixture.py  test_artifacts.py  test_audit_fixes.py  test_coff.py  test_compiler.py  test_decompme_objdiff.py  test_diffing.py  test_docstring_audit.py  test_documentation.py  test_dynamic_symbolic.py  test_dynamorio.py  test_evidence.py  test_ghidra.py  test_integration.py  test_linker_metadata_corpus.py  test_local_llm.py  test_mcp.py  test_memory.py  test_pe32.py  test_production.py  test_project.py  test_release_contract.py  test_relink.py  test_review_remediation.py  test_second_audit_fixes.py  test_test_bundle.py  test_workqueue.py
release-0711/x86decomp-toolkit-0.7.11/wheels/: x86decomp_test_suite-0.7.11-py3-none-any.whl
release-079/x86decomp-toolkit-0.7.9/test-suite/: .gitignore  CHANGELOG.md  INTEGRATION.md  LICENSE  MAINTENANCE.md  MANIFEST.sha256  README.md  SECURITY.md  VERIFICATION.md  pyproject.toml
(+9340 files in other folders)
