[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "x86decomp-toolkit"
version = "0.4.0"
description = "Evidence-governed matching and functional decompilation toolkit for Windows x86/x86-64 PE projects"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "x86decomp-toolkit contributors"}]
keywords = ["reverse-engineering", "decompilation", "x86", "PE", "Ghidra"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Disassemblers",
]
dependencies = []

[project.optional-dependencies]
disassembly = ["capstone>=5.0.6,<6"]
dynamic = ["unicorn>=2.1.4,<3"]
symbolic = ["capstone>=5.0.6,<6", "z3-solver>=4.15,<5"]
angr = ["angr>=9.2,<10"]
service = ["fastapi>=0.128,<1", "uvicorn>=0.48,<1"]
full = ["capstone>=5.0.6,<6", "unicorn>=2.1.4,<3", "z3-solver>=4.15,<5", "fastapi>=0.128,<1", "uvicorn>=0.48,<1", "angr>=9.2,<10"]
pe = ["lief>=0.17,<0.18"]
dev = ["pytest>=8,<10", "jsonschema>=4.23,<5", "javalang>=0.13,<1", "PyYAML>=6,<7", "build>=1.2,<2"]

[project.scripts]
x86decomp = "x86decomp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools.package-data]
x86decomp = ["corpus/ground_truth_sources/*.c", "corpus/ground_truth_sources/*.cpp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
