[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "x86decomp-toolkit"
version = "0.7.11"
description = "Unified evidence-governed x86 and x86-64 decompilation toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{name = "x86decomp-toolkit contributors"}]
keywords = ["reverse-engineering", "decompilation", "x86", "PE", "Ghidra"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Disassemblers",
]
dependencies = []

[project.optional-dependencies]
disassembly = ["capstone>=5.0.6,<6"]
dynamic = ["unicorn>=2.1.4,<3"]
symbolic = ["capstone>=5.0.6,<6", "z3-solver>=4.15,<5"]
angr = ["angr>=9.2,<10"]
service = ["fastapi>=0.128,<1", "uvicorn>=0.48,<1"]
full = ["capstone>=5.0.6,<6", "unicorn>=2.1.4,<3", "z3-solver>=4.15,<5", "fastapi>=0.128,<1", "uvicorn>=0.48,<1", "angr>=9.2,<10"]
pe = ["lief>=0.17,<0.18"]
docs = ["mkdocs>=1.6,<2", "mkdocs-material>=9.6,<10"]
dev = ["pytest>=8,<10", "jsonschema>=4.23,<5", "javalang>=0.13,<1", "PyYAML>=6,<7", "build>=1.2,<2", "pyflakes>=3.3,<4", "ruff>=0.15,<1", "pyright>=1.1.411,<2", "mkdocs>=1.6,<2", "mkdocs-material>=9.6,<10"]

[project.scripts]
x86decomp = "x86decomp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
x86decomp = ["corpus/ground_truth_sources/*.c", "corpus/ground_truth_sources/*.cpp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E9", "F"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
include = ["src"]
extraPaths = ["src", "test-suite/src"]
exclude = ["build", "dist", "project-audit", "test-suite/build", "test-suite/dist"]
